--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-	This is a course program for CS 35L UCLA, which is to implement the Linux comm command in a Python program.
+This project is to impelmennt the Linux comm command in a Python program.
